cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_207.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/cfb64ede.c:140: error: DEAD_STORE
  The value written to &iv (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/cfb64ede.c:140:17: Write of unused value
138.                   iv = &ovec[0];
139.                   c2l(iv, v0);
140.                   c2l(iv, v1);
                       ^
141.               }
142.           }
